Tue Mar 15 22:09:26 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/DataWriterImpl.cpp:

          Don't log a warning when we receive a parameter update from the
          InfoRepo and we aren't tracking that reader because publisher-side
          content filtering is disabled.

        * java/jms/native/build.xml:

          Running GNU Make requires a "make depend" step.

Tue Mar 15 15:36:21 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/DataWriterImpl.cpp:

          Fixed a compiler warning.

        * MPC/config/dcps_test_lib.mpb:

          New base project for DDS tests that create libraries.

        * tests/DCPS/NotifyTest/NotifyTest.mpc:
        * tests/DCPS/Partition/Partition.mpc:

          Update these files to use the new mpb.  Also requires latest MPC rev.

        * lib/.empty:

          Removed this file.  It's a relic from the CVS days.

Tue Mar 15 14:05:11 UTC 2011  Byron Harris  <harrisb@ociweb.com>

        * tools/modeling/plugins/org.opendds.modeling.diagram.main/src/org/opendds/modeling/diagram/main/edit/parts/LibPackage2EditPart.java:
        * tools/modeling/plugins/org.opendds.modeling.diagram.main/src/org/opendds/modeling/diagram/main/edit/parts/LibPackageEditPart.java:

          Extend region of Package figure to include entire compartment
          for which children (Subpackages and libraries) selected from the palette
          are added to the Package. (RT 14610)

Mon Mar 14 23:41:58 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/DataReaderImpl.cpp:
        * dds/DCPS/DataSampleHeader.h:
        * dds/DCPS/DataSampleHeader.inl:
        * dds/DCPS/DataSampleHeader.cpp:
        * dds/DCPS/DataWriterImpl.h:
        * dds/DCPS/DataWriterImpl.cpp:
        * dds/DCPS/transport/framework/DataLink.h:
        * dds/DCPS/transport/framework/DataLink.cpp:
        * dds/DCPS/transport/framework/DataLinkSet.inl:
        * dds/DCPS/transport/framework/RepoIdSetMap.h: